--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -141,7 +141,7 @@ Hardware Design Methodology
 
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 
-\descript{Hybrid Simulation/Emulation | {\bf Collaboration with AMD/Xilinx} | {\bf Sep 2024 - Present}}
+\descript{Hybrid Simulation/Emulation | {\bf Collaboration with AMD/Xilinx} | \href{https://docs.google.com/gview?url=https://github.com/Quizenger/cv/raw/main/resources/Hybrid_Sim_Poster.pdf}{\bf Poster} | {\bf Sep 2024 - Present}}
 {\normalsize
 \begin{tightemize}
 \item Building a hybrid simulation/emulation platform atop FireSim to enable design verification and early DSE 
