Updates from Overleaf

--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -81,6 +81,8 @@ Advisor: Prof. Borivoje Nikolic
 \vspace*{3pt}
 \\
 \descript{Coursework: } Architectures and Systems for Warehouse-Scale Computers (A)
+\textbullet{}
+Fundamental Algorithms for Systems Modeling, Analysis, and Optimization (In-Progress)
 
 \vspace{6pt}
 
@@ -119,6 +121,7 @@ Programming Languages and Compilers (A)
 % Social Implications of Computer Technology
 
 \sectionsep
+% \vspace{6pt}
 
 \section{Research Interests: Computer Architecture}
 Hyperscale Architecture and Systems 
@@ -129,6 +132,7 @@ Hardware Design Methodology
 % \textbullet{}
 % Profile-Guided Methods
 \sectionsep
+% \vspace{6pt}
 
 \section{Research Experience}
 
@@ -250,7 +254,7 @@ Hardware Design Methodology
 \location{Spring 2024 |  \href{https://inst.eecs.berkeley.edu/~cs152/sp24/}{\bf Website}}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-\item Led overall organization of a course catered towards 130+ engineering graduates and upper-division undergraduates
+\item Led overall organization of the largest ever offering of CS 152/252A, a course catered towards 130+ engineering graduates and upper-division undergraduates
 \item Meticulously designed and debugged problems for exams and homework assignments
 \item Helped students learn about pipelining, OoO core design, the memory hierarchy, virtual memory, branch prediction, etc., in weekly office hours and by answering on the course Q/A forum
 \end{tightemize}
